...
                    maxLines: _isExpanded ? 20 : 1,
                    style: TextStyle(color: Colors.white, fontSize: 16),
                    cursorColor: Colors.white,
                    decoration: InputDecoration(
                      hintText: widget.projectName != null
                          ? 'New chat in ${widget.projectName}'
                          : 'Message Veraxi...',
                      hintStyle: TextStyle(
                          color: Theme.of(context)
                              .extension<AppThemeExtension>()!
                              .textTertiary,
                          fontSize: 16),
                      border: InputBorder.none,
...
