...
                        SizedBox(height: 12),
                        InkWell(
                          onTap: () =>
                              setState(() => _chatsExpanded = !_chatsExpanded),
                          child: Row(
                            children: [
                              Text('Chats',
                                  style: TextStyle(
                                      color: Theme.of(context)
                                          .extension<AppThemeExtension>()!
                                          .textTertiary,
                                      fontSize: 12,
                                      fontWeight: FontWeight.w600)),
...
