...
                style: TextStyle(color: Colors.white, fontSize: 14),
                cursorColor: Colors.white,
                onChanged: (val) => setState(() {
                  _globalSearchQuery = val.toLowerCase();
                }),
                decoration: InputDecoration(
                  hintText: 'Search models...',
                  hintStyle: TextStyle(color: Color(0xFF6E6E6E), fontSize: 14),
                  prefixIcon:
                      Icon(Icons.search, color: Color(0xFF6E6E6E), size: 18),
                  prefixIconConstraints:
                      const BoxConstraints(minWidth: 40, minHeight: 40),
                  filled: true,
...
